--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://CoralFragHags/whitelist"
+          href="https://CoralFragHags.com/whitelist"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
