--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="/">
+          <a href="https://CoralFragHags.xyz">
             <img src="images/x-icon/favicon-32x32.png" alt="logo" />
           </a>
         </div>
@@ -53,7 +53,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/CoralFragHags"
+            href="https://opensea.io/collection/coral-frag-hags"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -104,7 +104,7 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          The Coral Frag Hags will be available very soon!
         </p>
         <a
           id="actionButton"
@@ -112,7 +112,7 @@
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Metaverse Reef</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://opensea.io/collection/coral-frag-hags"
           target="_blank"
           rel="noopener noreferrer"
         >
