Add Social Links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,9 +60,26 @@
           <a
             href="https://twitter.com/CoralFragHagNFT"
             target="_blank"
-            rel="noopener noreferrer"
+            rel="noopener noreferrer"   
           >
-            <img src="images/header/twitter.webp" alt="Twitter" />
+            <img src="images/header/twitter.webp" alt=
+            "Twitter" />
+          </a>
+          <a
+          href="https://www.facebook.com/CoralFragHagsNFT"
+          target="_blank"
+          rel="noopener noreferrer"
+          >
+          <img src="images/header/facebook.webp" alt=
+          "Facebook" />
+          </a>
+          <a
+          href="https://www.instagram.com/CoralFragHagsNFT/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >
+          <img src="images/header/instagram.webp" alt=
+          "Instagram" />
           </a>
           <a
             href="https://opensea.io/collection/coral-frag-hags"
