Update discord link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/VKzVkAF4"
+            href="https://discord.gg/K2GCN69afG"
             target="_blank"
             rel="noopener noreferrer"
           >
