Update Join COmmunity Button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,7 +137,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://CoralFragHags.xyz/whitelist"
+          href="https://discord.gg/K2GCN69afG"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
