--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,7 +177,8 @@
             <h3>Total</h3>
             <p id="totalPrice">.001 ETH</p>
           </div>
-          <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
+          <button id="mintButton" class="hero-btn btn mint-btn">Mint</button><br>
+          <center><b>You may need to manually adjust the GAS to sucessfully mint.</b></center>>
         </div>
       </div>
       <div class="minted-container card show-card hidden">
