Update mint message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -178,7 +178,10 @@
             <p id="totalPrice">.001 ETH</p>
           </div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button><br>
-          <center><b>You may need to manually adjust the GAS to sucessfully mint.</b></center>>
+          <center>
+            <b>You may need to manually adjust the GAS to sucessfully mint.</b><br>
+             During Pre-Sale minting the is a one transaction per wallet address limit.
+            </center>
         </div>
       </div>
       <div class="minted-container card show-card hidden">
