Update mint message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -180,7 +180,7 @@
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button><br>
           <center>
             <b>You may need to manually adjust the GAS to sucessfully mint.</b><br>
-             During Pre-Sale minting the is a one transaction per wallet address limit.
+             Pre-Sale minting there is a one transaction per wallet address limit.
             </center>
         </div>
       </div>
