update gas messsage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -179,8 +179,8 @@
           </div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button><br>
           <center>
-            <h2>You WILL need to manually adjust the GAS to sucessfully mint.</h2><br>
-            <h3>The polygon network is VERy busy and the minting DAPP can not successfully estimate the correct gas.</h3><br>
+            <h2 color="red">You WILL need to manually adjust the GAS to mint.</h2><br>
+            <h3>The polygon network is VERY busy and the minting DAPP can not successfully estimate the correct gas.</h3><br>
              Pre-Sale minting there is a one transaction per wallet address limit.
             </center>
         </div>
