--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,7 +181,7 @@
           <center>
             <h2 style="color: red;">You <blink>WILL</blink> need to manually adjust the GAS to mint.</h2><br>
             <h3>The polygon network is VERY busy and the minting DAPP can not successfully estimate the correct gas.</h3>
-            Watch this <a href="https://www.youtube.com/watch?v=wGwIfBO8A2k" target="_blank">YouTube video</a> to learn more about changeing the MetaMask gas.<br><br>
+            Watch this <a href="https://www.youtube.com/watch?v=wGwIfBO8A2k" target="_blank">YouTube video</a> to learn more about changing the MetaMask gas.<br><br>
              Pre-Sale minting there is a one transaction per wallet address limit.<br>
              DAPP v2.1.5
             </center>
