--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,7 @@
           <a href="https://CoralFragHags.xyz">
             <img src="images/x-icon/favicon-32x32.png" alt="logo" />
           </a>
+          &nbsp;&nbsp;DAPP v2.1.6
         </div>
         <div class="menu">
           <a
@@ -183,7 +184,7 @@
             <h3>The polygon network is VERY busy and the minting DAPP can not successfully estimate the correct gas.</h3>
             Watch this <a href="https://www.youtube.com/watch?v=wGwIfBO8A2k" target="_blank">YouTube video</a> to learn more about changing the MetaMask gas.<br><br>
              Pre-Sale minting there is a one transaction per wallet address limit.<br>
-             DAPP v2.1.6
+             
             </center>
         </div>
       </div>
